zokrates_cli/examples/compile_errors/generics/return_generic_call_mismatch.zok
def bar() -> field[3] {
    return [1, 2, 3];
}

def foo<N>() -> field[N] {
    return bar();
}

def main() -> field[2] {
    return foo();
}